--- a/config/database.yml
+++ b/config/database.yml
@@ -1,6 +1,6 @@
 development: &default
   adapter: postgresql
-  database: application_development
+  database: rails_starter_development
   encoding: utf8
   host: localhost
   min_messages: warning
@@ -12,7 +12,7 @@ development: &default
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: application_test<%= ENV['TEST_ENV_NUMBER'] %>
+  database: rails_starter_test<%= ENV['TEST_ENV_NUMBER'] %>
 
 staging:
   <<: *default
